# cef-grogu

./: .gitignore  README.md  cefclient analysis.pptx
Qt_tutorial/Qt_tutorial/: CMakeLists.txt  Qt_tutorial_ko_KR.ts  custom_qcview.cpp  custom_qcview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_tutorial/Qt_tutorial/cef_binary_win64/: CMakeLists.txt
Qt_tutorial/Qt_tutorial/cef_binary_win64/cmake/: cef_macros.cmake
Qt_tutorial/Qt_tutorial/qcview/: browser_handler.h  event.h  protocol.h  query.h  query_handler.h  scheme_handler.h  view.h  view_delegate.h  view_impl.h  window.cpp  window.h
Qt_tutorial/legacies/qcview/: CMakeLists.txt
Qt_tutorial/legacies/qcview/browser/: query.h  query_handler.h
Qt_tutorial/legacies/qcview/common/: cef_manager.h
Qt_tutorial/legacies/test/: CMakeLists.txt  CustomCefView.h
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/cefgrogu/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/cefgrogu/browser/: binding_test.cc  binding_test.h  browser_window.cc  browser_window.h  browser_window_osr_win.cc  browser_window_osr_win.h  browser_window_std_win.cc  browser_window_std_win.h  client_browser.cc  client_browser.h  client_handler.cc  client_handler.h  client_handler_osr.cc  client_handler_osr.h  client_handler_std.cc  client_handler_std.h  dialog_test.cc  dialog_test.h  drm_test.cc  drm_test.h  image_cache.cc  main_context_impl.cc  main_context_impl.h  main_context_impl_win.cc  main_message_loop_multithreaded_win.cc  main_message_loop_multithreaded_win.h  media_router_test.cc  media_router_test.h  osr_accessibility_node.cc  osr_d3d11_win.cc  osr_dragdrop_win.cc  osr_dragdrop_win.h  osr_ime_handler_win.cc  osr_render_handler_win.cc  osr_render_handler_win.h  osr_render_handler_win_d3d11.cc  osr_render_handler_win_d3d11.h  osr_render_handler_win_gl.cc  osr_render_handler_win_gl.h  osr_renderer.cc  (+33 more)
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/cefgrogu/common/: client_app_delegates_common.cc  scheme_test_common.cc
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/cefgrogu/renderer/: client_app_delegates_renderer.cc  client_renderer.cc  performance_test.cc  performance_test_tests.cc
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/cmake/: FindCEF.cmake  cef_variables.cmake
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/legacies/cefgrogu/: README.md
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/shared/browser/: main_message_loop_external_pump.h
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/tests/cefclient/browser/: browser_window.cc  client_handler.h  client_types.h  main_context_impl.cc  main_context_impl.h  root_window.cc  root_window.h  root_window_create.cc  root_window_win.cc  views_menu_bar.h
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/tests/cefclient_2/browser/: browser_window.cc  browser_window.h  client_handler.cc  client_handler.h  client_types.h  main_context.h  main_context_impl.cc  main_context_impl.h  root_window.h  scheme_test.cc  (+5 more)
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/tests/cefgrogu/: cefgrogu.cc
cef_binary_96.0.18+gfe551e4+chromium-96.0.4664.110_windows64_minimal/tests/cefsimple/: cefsimple.rc  cefsimple_win.cc  client_types.h  image_cache.cc  main_context.h  resource.h  scheme_test.hpp  simple_app.cc  simple_app.h  test_runner.hpp
cef_binary_96.0.18_win64/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  config.cmake
cef_binary_96.0.18_win64/cefclient/: CMakeLists.txt  cefclient.cc  cefclient_win.cc  cmake_install.cmake
cef_binary_96.0.18_win64/cefclient/browser/: browser_window.cc  browser_window.h  browser_window_std_win.cc  browser_window_std_win.h  client_app_browser.cc  client_app_browser.h  client_app_delegates_browser.cc  client_browser.cc  client_browser.h  client_handler.cc  client_handler.h  client_handler_std.h  client_types.h  extension_util.cc  geometry_util.cc  image_cache.cc  main_context.h  main_context_impl.cc  main_context_impl.h  main_message_loop.cc  main_message_loop.h  main_message_loop_external_pump.h  main_message_loop_external_pump_win.cc  main_message_loop_multithreaded_win.cc  main_message_loop_multithreaded_win.h  main_message_loop_std.cc  main_message_loop_std.h  resource.h  resource_idmap.cc  resource_util_win.cc  resource_util_win_idmap.cc  root_window.cc  root_window.h  root_window_create.cc  root_window_manager.cc  root_window_manager.h  root_window_win.cc  root_window_win.h  scheme_test.cc  temp_window.cc  (+4 more)
cef_binary_96.0.18_win64/cefclient/common/: client_app.cc  client_app_delegates_common.cc  client_switches.cc
cef_binary_96.0.18_win64/cefclient/network/: boost_test.cc  boost_test.h
cef_binary_96.0.18_win64/cefclient/renderer/: client_app_delegates_renderer.cc  client_app_renderer.h  client_renderer.cc  performance_test.cc  performance_test_tests.cc
cef_binary_96.0.18_win64/cefclient/resources/: cefclient.aps  cefclient.rc  grogu.html  server.html
cef_binary_96.0.18_win64/cefclient/tests/: scheme_test.cc  server_test.cc  server_test.h  test_runner.cc  test_runner.h  urlrequest_test.cc  urlrequest_test.h
cef_binary_96.0.18_win64/cefclient/utils/: extension_util.cc  file_util.cc  geometry_util.cc  resource_util.cc  resource_util.h  util_win.cc
cef_binary_96.0.18_win64/cmake/: cef_variables.cmake
cef_binary_96.0.18_win64/qcview/: CMakeLists.txt  README.md
cef_binary_96.0.18_win64/qcview/browser/: browser_app.h  cef_window.cpp  scheme_handler.cpp
cef_binary_96.0.18_win64/qcview/cmake/: CMakeLists.txt
cef_binary_96.0.18_win64/qcview/common/: cef_manager.cpp  cef_setting.h  event.h
cef_binary_96.0.18_win64/shared/common/: client_switches.cc
legacies/cefclient_1/: CMakeLists.txt  cefclient_win.cc
legacies/cefclient_1/browser/: test_runner.cc
(+103 files in other folders)
